--- a/skins/scmRed/skin.css
+++ b/skins/scmRed/skin.css
@@ -1,30 +1,35 @@
-#player,#player a{ color:#931313; }
-#player{ background:url(sizerAndVol.png); background-position: bottom !important; background-repeat: repeat-x !important; }
-#player .mainImage{ background:url(main.png); }
+#player,#player a{ color:##3d02fe
+;  font-size: 12px; font-family: courier new;}
+#player{ background:url(http://static.tumblr.com/d41lcii/BsOmfd49y/reeducarvolume.png); background-position:bottom; background-color: ##3d02fe
+;}
+#player .mainImage{ background:url(http://static.tumblr.com/d41lcii/boImfd49d/skinsimplesgray.png); }
 
 #player #baseLeft{ width:93px; }
 #player #baseRight{ width:145px;}
-#player .button{  width:22px; }
-#player #play{ background:url(playBtn.png); }
-#player #play,#player #pause{ left:32px; }
-#player #previous{ left:8px; }
-#player #next{ left:55px; }
-#player #title{ left:95px;}
+#player .button{  width:26px; }
+#player #play{ background:url(http://static.tumblr.com/d41lcii/gjHmre06c/dsjkfhjkdsb.png); }
+#player #play,#player #pause{ left:26px; }
+#player #previous{ left:0px; }
+#player #next{ left:52px; }
+#player #title{ left:90px;  font-size: 12px; }
 #player #tooltip{ right:196px; }
-#player #timer{ right:122px;  }
-#player #list{ right:5px; }
-#player #list{ right:5px; }
+#player #timer{ right:120px;  }
+#player #list{ right:0px; }
 
 #player #seeker{ right:320px; }
-#player #seekerBase{ border-color:#931313; }
-#player #seekerBuffered{ background-color:#e99a9a; }
-#player #seekerSliderBase{ background-color:#931313; }
+#player #seekerBase{ border-color:#fb0303
+;  }
+#player #seekerBuffered{ background-color:#fb0303
+; }
+#player #seekerSliderBase{ background-color:#fb0303
+; }
 
-#player #volume{ width:70px; right:33px; }
-#player #volumeSlider{ width:14px; background:url(sizerAndVol.png); }
+#player #volume{ width:65px; right:39px; }
+#player #volumeSlider{ width:8px; background:url(http://static.tumblr.com/d41lcii/BsOmfd49y/reeducarvolume.png); }
 
-#playlist,#playlist .module,#playlist h3{ border-color:#a10f0f; color:#931313; }
-#playlist h3{ background:url(bar.png); background-repeat: repeat-x !important; color:#FFF;}
-#playlist .even{background-color:#FFF;}
-#playlist .odd{ background-color:#ffe3e3;}
-#playlist .focus{ background-color:#931313; color:#FFF;}
+#playlist,#playlist .module,#playlist h3{ border-color:#ffffff;}
+#playlist .module{  color:#COR DA FONT DA PLAY; background-color:#ffffff; }
+#playlist h3{ background:url(http://dl.dropbox.com/u/58708531/bar2.jpg); color:#000000; background-color:#ffffff;  }
+#playlist .even{background-color:#fff;}
+#playlist .odd{ background-color:#fff;}
+#playlist .focus{ background-color:#fff; color:#aaa;}
